# rollerCoaster

./: .gitignore  PROJECT_SPEC.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: analysis.py  geometry.py  physics.py  projects.py  router.py  topology.py
backend/app/models/: __init__.py  common.py  control.py  equipment.py  project.py  topology.py  track.py  train.py
backend/app/services/: project_io.py  validator.py
backend/app/simulation/: __init__.py
backend/app/simulation/analysis/: __init__.py  block_timing.py  emergency_stop.py  load_case.py  throughput.py  types.py  validator.py
backend/app/simulation/control/: __init__.py  events.py  interlocks.py  manager.py  python_runtime.py  rule_engine.py
backend/app/simulation/equipment/: __init__.py  booster.py  lift.py  lsm.py  manager.py  pneumatic_brake.py  trim_brake.py
backend/app/simulation/geometry/: __init__.py  cache.py  errors.py  spline.py  types.py  validator.py
backend/app/simulation/physics/: __init__.py  dynamics.py  forces.py  gforce.py  integrator.py  types.py
backend/app/simulation/topology/: __init__.py  graph.py  routing.py  types.py
backend/tests/: __init__.py
backend/tests/test_api/: __init__.py  test_projects.py
backend/tests/test_models/: __init__.py  test_common.py  test_control.py  test_equipment.py  test_project.py  test_topology.py  test_track.py  test_train.py
backend/tests/test_services/: __init__.py  test_project_io.py
backend/tests/test_simulation/: test_integration.py
frontend/: .gitignore  index.html  (+3 more)
(+63 files in other folders)
